motor_wifi_control/build/log/idf_py_stdout_output_9440
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/encoder_hw.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/encoder_hw.c.obj 
/home/chonxi/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/chonxi/robotreal/esp32/motor_wifi_control/build/config -I/home/chonxi/robotreal/esp32/motor_wifi_control/main -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_libc/platform_include -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/config/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/config/include/freertos -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/config/xtensa/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/chonxi/.espressif/v6.0/esp-idf/components/freertos/esp_additions/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/include/soc -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/ldo/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/etm/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/power_supply/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/modem/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/heap/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/heap/tlsf -I/home/chonxi/.espressif/v6.0/esp-idf/components/log/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/soc/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/soc/esp32 -I/home/chonxi/.espressif/v6.0/esp-idf/components/soc/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/soc/esp32/register -I/home/chonxi/.espressif/v6.0/esp-idf/components/hal/platform_port/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/hal/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/hal/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_rom/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_rom/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_rom/esp32 -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_common/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_system/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_system/port/soc -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_system/port/include/private -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_stdio/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/xtensa/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/xtensa/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/xtensa/deprecated_include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_gpio/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_usb/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_pmu/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_ana_conv/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_dma/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_i2s/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/include/apps -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/lwip/src/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/port/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/port/freertos/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/chonxi/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/chonxi/.espressif/v6.0/esp-idf/components/driver/i2c/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/driver/touch_sensor/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/driver/twai/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/driver/touch_sensor/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_i2c/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_i2c/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_twai/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_twai/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_touch_sens/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_touch_sens/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_wifi/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_wifi/include/local -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_wifi/wifi_apps/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_event/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_phy/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_phy/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_netif/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_http_server/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/http_parser -I/home/chonxi/.espressif/v6.0/esp-idf/components/nvs_flash/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_partition/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_blockdev/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_timer/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_driver_gpio/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_driver_ledc/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_ledc/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_ledc/esp32/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_driver_mcpwm/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_mcpwm/include -I/home/chonxi/.espressif/v6.0/esp-idf/components/esp_hal_mcpwm/esp32/include @"/home/chonxi/robotreal/esp32/motor_wifi_control/build/toolchain/cflags" -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/chonxi/robotreal/esp32/motor_wifi_control=. -fmacro-prefix-map=/home/chonxi/.espressif/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/encoder_hw.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/encoder_hw.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/encoder_hw.c.obj -c /home/chonxi/robotreal/esp32/motor_wifi_control/main/encoder_hw.c
/home/chonxi/robotreal/esp32/motor_wifi_control/main/encoder_hw.c: In function 'encoder_hw_init':
/home/chonxi/robotreal/esp32/motor_wifi_control/main/encoder_hw.c:188:18: error: 'struct extra_capture_channel_flags' has no member named 'pull_down'
  188 |                 .pull_down = can_pull_down,
      |                  ^~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/chonxi/robotreal/esp32/motor_wifi_control/build/bootloader && /home/chonxi/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/chonxi/.espressif/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/chonxi/robotreal/esp32/motor_wifi_control/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
